--- a/notizie.html
+++ b/notizie.html
@@ -80,7 +80,7 @@
         </div>
     </div>
     <footer>
-    <p>&copy; 2024 Notizie Italiane</p>
+     <p>&copy; 2024 Notizie Italiane | <a href="privacy.html">Norme sulla Privacy</a></p>
 </footer>
 <script>
     function updateCalendar() {
