--- a/nuova-farfalla.html
+++ b/nuova-farfalla.html
@@ -122,7 +122,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 Notizie Italiane</p>
+         <p>&copy; 2024 Notizie Italiane | <a href="privacy.html">Norme sulla Privacy</a></p>
     </footer>
 </body>
 </html>
