--- a/scoperta-tesoro.html
+++ b/scoperta-tesoro.html
@@ -121,7 +121,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 Notizie Italiane</p>
+         <p>&copy; 2024 Notizie Italiane | <a href="privacy.html">Norme sulla Privacy</a></p>
     </footer>
 </body>
 </html>
