--- a/sport.html
+++ b/sport.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 Notizie Italiane</p>
+         <p>&copy; 2024 Notizie Italiane | <a href="privacy.html">Norme sulla Privacy</a></p>
     </footer>
 </body>
 </html>
